LLM/openwebui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
spec:
  defaultBackend:
    service:
      name: open-webui
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
      - openwebui
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama
spec:
  defaultBackend:
    service:
      name: open-webui-ollama
      port:
        number: 11434
  ingressClassName: tailscale
  tls:
    - hosts:
      - ollama
